# CLI-Rhythm

./: .cache  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: app.rs  input_handler.rs  main.rs  song.rs  ui.rs  utils.rs
