[package]
name = "CLI-Rhythm"
version = "0.7.0"
edition = "2021"
authors = ["Andrii <andriikurochka@ukr.net>"]
description = "A simple and functional CLI music player."
readme = "README.md"
keywords = ["cli", "player", "music", "minimal", "rhythm"]
categories = ["command-line-utilities", "multimedia::audio"]
repository = "https://github.com/Arklingh/CLI-Rhythm"
licence = "Apache-2.0"
license-file = "LICENSE"

[dependencies]
audiotags = "0.5.0"
id3 = "1.14.0"
crossterm = { version = "0.27.0", features = ["serde"] }
dirs = "5.0.1"
mp3-metadata = "0.3.4"
rodio = "0.17.3"
tempfile = "3.10.1"
textwrap = "0.16.1"
ratatui = "0.29.0"
uuid = { version = "1.10.0", features = ["serde", "v5"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
notify-rust = "4.11.1"
hound = "3.5.1"
claxon = "0.4.3"
ratatui-image = "4.2.0"
image = "0.25.5"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "cli-rhythm"
path = "src/main.rs"
