[package]
name = "CLI-Rhythm"
version = "1.0.1"
edition = "2021"
authors = ["Andrii <andriikurochka@ukr.net>"]
description = "A simple and functional CLI music player."
readme = "README.md"
keywords = ["cli", "player", "music", "minimal", "rhythm"]
categories = ["command-line-utilities", "multimedia::audio"]
repository = "https://github.com/Arklingh/CLI-Rhythm"
license = "Apache-2.0"

[dependencies]
audiotags = "0.5.0"
crossterm = { version = "0.29", features = ["serde"] }
dirs = "6.0.0"
mp3-metadata = "0.4.0"
rodio = "0.22.2"
ratatui = "0.30.1"
uuid = { version = "1.10.0", features = ["serde", "v5"] }
ratatui-image = { version = "11.0.4", default-features = false, features = ["crossterm"] }
image = "0.25.5"
rand = "0.10.1"
fuzzy-matcher = "0.3"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "cli-rhythm"
path = "src/main.rs"
